Worked with form-validation

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/style.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+                integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+                crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
 </head>
 <body>
     <section class="promo">
@@ -96,20 +100,17 @@
                 Lorem ipsum dolor sit amet consectetur <br>
                 and adipisicing elit natus volupt.
             </div>
-            <form class="feed-form consultation__form" action="#" method="POST">
+            <form class="feed-form consultation__form" id="consultation-form" action="#" method="POST">
                 <input class="feed-form__item" 
-                        name="name" 
-                        required 
+                        name="name"  
                         type="text" 
                         placeholder="Ipsuratm Lorem">
                 <input class="feed-form__item" 
                         name="phone" 
-                        required 
                         type="number" 
                         placeholder="Adipisicing elit">                
                 <input class="feed-form__item"  
                         name="email" 
-                        required 
                         type="email" 
                         placeholder="Natus volupt">                
 
@@ -548,20 +549,17 @@
             <div class="modal__close">&times;</div>
             <div class="modal__subtitle">Lorem Ipsuratmisu Dolore Apas</div>
             <div class="modal__descr">Lorem ipsum dolor sit amet Nihil!</div>
-            <form class="feed-form modal__form" action="#" method="POST">
+            <form class="feed-form modal__form" id="consultation-modal-form" action="#"  method="POST">
                 <input class="feed-form__item" 
-                        name="name" 
-                        required 
+                        name="name"
                         type="text" 
                         placeholder="Ipsuratm Lorem">
                 <input class="feed-form__item" 
                         name="phone" 
-                        required 
                         type="number" 
                         placeholder="Adipisicing elit">                
                 <input class="feed-form__item"  
-                        name="email" 
-                        required 
+                        name="email"
                         type="email" 
                         placeholder="Natus volupt">                
 
@@ -573,20 +571,17 @@
             <div class="modal__close">&times;</div>
             <div class="modal__subtitle">Dolore Apas:</div>
             <div class="modal__descr">Lorem ipsum dolor!</div>
-            <form class="feed-form modal__form" action="#" method="POST">
+            <form class="feed-form modal__form" id="order-form" action="#" method="POST">
                 <input class="feed-form__item" 
                         name="name" 
-                        required 
                         type="text" 
                         placeholder="Ipsuratm Lorem">
                 <input class="feed-form__item" 
                         name="phone" 
-                        required 
                         type="number" 
                         placeholder="Adipisicing elit">                
                 <input class="feed-form__item"  
                         name="email" 
-                        required 
                         type="email" 
                         placeholder="Natus volupt">                
 
@@ -605,5 +600,6 @@
     <script src="js/blocks/catalog-item/catalog-item.js"></script>
     <script src="js/blocks/catalog/__tab/tab.js"></script>
     <script src="js/blocks/modal/modal.js"></script>
+    <script src="js/blocks/form/form.js"></script>
 </body>
 </html>
