--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a class="header__logo" href="#">
@@ -595,11 +595,17 @@
             <div class="modal__descr">Lorem ipsum dolor!</div>
         </div>
     </div>
+
+    <a href="#up" class="pageup">
+        <img src="icons/circle-chevron-up-solid.svg" alt="Page up">
+    </a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/blocks/carousel/carousel.js"></script>
     <script src="js/blocks/catalog-item/catalog-item.js"></script>
     <script src="js/blocks/catalog/__tab/tab.js"></script>
     <script src="js/blocks/modal/modal.js"></script>
     <script src="js/blocks/form/form.js"></script>
+    <script src="js/blocks/pageup/pageup.js"></script>
+
 </body>
 </html>
