Added an animation

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                         Vitae, omnis aliquid quod natus deserunt itaque eos voluptatibus.</div>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__icon" src="icons/advantages/heart.png" alt="Heart">
+                    <img class="benefits__icon benefits__icon_animated" src="icons/advantages/heart.png" alt="Heart">
                     <div class="benefits__subheader">Lorem Iptumaris</div>
                     <div class="benefits__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Veniam nisi deserunt nihil libero? Necessitatibus consequatur vel quae 
