Added animations to project

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/style.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous"></script>
@@ -470,7 +474,7 @@
         <div class="container">
             <h2 class="title">Lorem Iptumaris</h2>
             <div class="feedback__clients">
-                <div class="feedback__client">
+                <div class="feedback__client wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <div class="feedback__img">
                         <img src="img/feed_1.png" alt="Feedback 1">
                     </div>
@@ -484,7 +488,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="feedback__client">
+                <div class="feedback__client wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <div class="feedback__img">
                         <img src="img/feed_2.png" alt="Feedback 1">
                     </div>
@@ -498,7 +502,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="feedback__client">
+                <div class="feedback__client wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <div class="feedback__img">
                         <img src="img/feed_3.png" alt="Feedback 1">
                     </div>
@@ -600,12 +604,12 @@
         <img src="icons/circle-chevron-up-solid.svg" alt="Page up">
     </a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/libraries/wow.min.js"></script>
     <script src="js/blocks/carousel/carousel.js"></script>
     <script src="js/blocks/catalog-item/catalog-item.js"></script>
     <script src="js/blocks/catalog/__tab/tab.js"></script>
     <script src="js/blocks/modal/modal.js"></script>
     <script src="js/blocks/form/form.js"></script>
     <script src="js/blocks/pageup/pageup.js"></script>
-
 </body>
 </html>
